@@ -1,3 +1,7 @@
+2005-01-23 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: write actually used libpartedversion to stdout on startup. (usefull for debugging)
+
 2005-01-22 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
 	* include/Dialog_Base_Partition.h,
